--- a/src/main/docker/blog/docker-compose.yml
+++ b/src/main/docker/blog/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.1'
 
 services:
   blog_server:
-    build: ../go/blog/blog_server
+    build: ../../go/blog/blog_server
     ports:
       - "50051:50051"
     depends_on:
       - mongo
   blog_client:
-    build: ../go/blog/blog_client
+    build: ../../go/blog/blog_client
     depends_on:
       - blog_server
   mongo:
